blog1/infra/k8s/post-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts-container
          image: adarsh893/posts:latest

---
apiVersion: v1
kind: Service
metadata:
  name: posts-cluster-srv
spec:
  selector:
    app: posts
  ports:
    - name: posts-port
      protocol: TCP
      port: 4000
      targetPort: 4000
