blog1/infra/k8s/post-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000. # nodeport service url
      targetPort: 4000 #index.js port
