blog1/infra/k8s/query-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query-container
          image: adarsh893/query
---
apiVersion: v1
kind: Service
metadata:
  name: query-cluster-srv
spec:
  selector:
    app: query
  ports:
    - name: query-port
      protocol: TCP
      port: 4002
      targetPort: 4002
